<resources>
    <string name="app_name">BTYS2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_name">Home</string>
    <string name="input_name">Input Data</string>
    <string name="history_name">Results History</string>
    <string name="about_name">About App</string>
    <string name="device_name">Input from Device</string>

    <string name="home">Home</string>
    <string name="input">Input Data</string>
    <string name="history">Results History</string>
    <string name="about">Your Health is your Wealth
        \n
        An app by Pádraig Ryan &amp; Diarmuid O Hanlon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
