<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/home_name" />
        <item
            android:id="@+id/nav_input"

            android:title="@string/input_name" />
        <item
            android:id="@+id/nav_device"

            android:title="@string/device_name" />
        <item
            android:id="@+id/nav_history"

            android:title="@string/history_name" />
        <item
            android:id="@+id/nav_about"

            android:title="@string/about_name" />

    </group>
    <!--
    android:icon="@drawable/ic_menu_manage"
    android:icon="@drawable/ic_menu_slideshow"
    android:icon="@drawable/ic_menu_gallery"
    android:icon="@drawable/ic_menu_camera"

    -->
    <!--
        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>-->

    </menu>
